text: Add notes of Villani et al 2017

--- a/content/13.singlecell.md
+++ b/content/13.singlecell.md
@@ -1,5 +1,5 @@
 
-# Single-celll RNA-Seq annotations
+# Computational single-cell research
 ## Searching large-scale scRNA-seq databases via unbiased cell embedding with Cell BLAST
     \cite{cao2020searching
     
@@ -155,6 +155,110 @@ The cell-type identity is then determined using the collection of cell-type mark
 In such cases it is possible to compare if the predicted cell type matches the ‘biological’ cell type. We identified 17 independent datasets with homogeneous cell-type populations, where the biological cell type has been reported.
 
 At the time when this work was initiated, there was no published database or comprehensive list of genes that can be used for automatic cell-type assignment [CellMarker (41) came out when this manuscript was in preparation].
+
+### Comments
+
+# Experimental single-cell research 
+
+## Single-cell RNA-seq reveals new types ofhuman blood dendritic cells, monocytes, and progenitors
+[@doi:10.1126/science.aah4573]
+### Highlights
+
+Atlas of human blood dendritic cells and monocytes
+
+Dendritic cells (DCs) and monocytes consist of multiple specialized sub- types that play a central role in pathogen sensing, phagocytosis, and antigen presentation. However, their identities and interrelationships are not fully understood, as these populations have historically been definedbyacombination of morphology, physical properties, localiza- tion, functions, developmental origins, and expression ofa restricted set of surface markers.
+
+
+Single-cell RNA sequencing of~2400cells isolated from healthy blood donors and enriched for HLA-DR+ lineage− cells
+
+six DC subtypes
+four monocyte subtypes, and thus revise the taxonomy of these cells
+
+DC subset, representing 2 to 3% of the DC populations across all __10 donors__ tested, characterized by the expression ofAXL, SIGLEC1, and SIGLEC6 antigens, named AS DCs.
+
+This split is further reflected through AS DC gene expression signatures spanning aspectrumbetween cDC-like andpDC- like gene sets. Although AS DCs share prop- erties with pDCs, they more potently activate T cells. This discovery led us to reclassify pDCs as the originally described “natural interferon- producing cells (IPCs)” with weaker T cell pro- liferation induction ability.
+
+A new subdivision within the CD1C+ DC subset: one defined by a major histocompatibility complex class II–like gene set andonebyaCD14+ monocyte–like prominent gene set
+
+
+The discovery of AS DCs withinthe traditionally definedpDCpopulation explains manyofthe cDC properties previously assigned to pDCs, highlighting the need to re- visit the definition of pDCs
+
+
+it is unclear how many DC subtypes exist, how they are related to each other, and how they differ from other mononuclear phagocytes.
+
+In the blood, DC subtypes include CD11C+ con- ventional DCs (cDCs), consisting of either CD141+ or CD1C+ cells, and plasmacytoid DCs (pDCs), consisting of CD123+ cells.
+
+
+we developed an experimental and computational strategy to 
+(i) perform single-cell RNA sequencing on DCs and monocytes derived from a single healthy individual;
+(ii) identify clusters of cells that are similar to each other; 
+(iii) find discriminative markers per cluster; 
+(iv) prospectively isolate cells corresponding to key clusters using newly identified surface markers; 
+(v) validate the identity of the sorted cells using scRNA-seq; (vi) confirm the existence of these cell types in up to 10 independent healthy individuals; and 
+(vii) perform functional analyses for selected cell types.
+Single-cell
+
+Ficoll-enriched cells that were isolated by fluorescence-activated cell sorting (FACS) (Fig. 1A) excluding cells expressing markers of B, T, and NK cells (6).
+
+For DCs, we sampled LIN–HLA-DR+CD14– cells across the CD11C+ fraction (to enrich for CD141+ and CD1C+ cDCs) and the CD11C– fraction (to enrich for CD123+ pDCs)
+
+deep scRNA-seq using a modified Smart-Seq2 protocol
+
+LIN–HLA- DR+CD14– population
+
+We defined six cell clusters within the LIN–HLA- DR+CD14– population using unsupervised analy- sis that did not rely on known markers of DCs
+
+Up to five top discriminators are listed next to each cluster; number in brackets refers to AUC value.
+
+Axl (1.00)
+SIGLEC6 + (0.97)
+
+Several markers commonly used to identify pDCs (e.g., IL3RA/CD123, CLEC4C/CD303) were also expressed in the population defined by the DC5 cluster, leading us to define a new combination of markers that distinguish pDCs from the DC5 population. 
+
+Discovering monocyte subsets and their relationships to DC subsets. The two largest clusters, Mono1 and Mono2, contained the CD14++CD16– (“classical”) and CD14+CD16++ (“nonclassical”) monocytes, respectively
+
+Population emerged from the unbiased cluster analysis (cluster DC5; Fig. 1), definedbycoexpressionofuniquemarkers (e.g., AXL, SIGLEC1, SIGLEC6,and CD22/SIGLEC2) (Fig. 4A, fig. S5A, and tables S1 and S2). Flow cytometry analysis of peripheral blood mono- nuclear cells (PBMCs) from 10 independent do- nors confirmed the existence of AXL+SIGLEC6+ cells (“AS DCs”)
+
+AS DCs exhibited a spectrum of states based on gene expression (Fig. 4D) defined by cells enriched for a pDC-like signature (e.g., IL3RA, IGJ, NRP1, MZB1) and cells enriched for a cDC- like signature (IFI30, ITGAX, LY86, GLIPR2, FGR, LYZ, ENTPD1).
+
+Taken to- gether, our data suggest that AXL+SIGLEC6+ DCs are related but not identical to cDCs or pDCs.
+
+When we seeded cultures with pDCs and CD1C+ and CLEC9A+ DCs, we found that they generally retained the same phenotype throughout the differentiation assay. After 7 days in culture, we observed cells with high levels of CD1C (frequency 40 to 50%, n =6 donors) and rare cells with surface CLEC9A and CADM1 (0.5 to 0.8%) expression (Fig. 6F)
+
+Cells differentiated from AS DCs did not express BATF3 (a transcription factor required for terminal differentiation of CLEC9A+ DCs), CADM1,or XCR1, which are key CLEC9A+ DC discriminative markers (table
+ 
+We found that AS DCs did not divide during the transition into CD1C+ DCs.
+
+We leveraged our human DC atlas to compare pathogenic cells driving blastic plasmacytoid dendritic cell neoplasm (BPDCN), a rare and ag- gressive hematological malignancy previously known as NK cell leukemia/lymphoma.
+
+DCs and monocytes are defined according to a combination of molecular markers, functional properties, and ontogeny (39). However, it remains unclearwhether the expression ofexistingmarkers tracks with themore complex internal states of cells.
+
+Previous studies classified human blood DCs into one pDC and twocDC populations. Our study identifies six DC populations.
+
+AS DCs most closely resemble CD1C+ cDCs in basic functional properties and expres- sion signatures, they are likely to have distinct functions because they localize to the T cell zone of tonsils and express several lectins, which rec- ognize diverse glycans, andAXL,which interacts with apoptotic cells and Zika virus
+
+
+Furthermore, a murine study identified nonca- nonical CX3CR1+CD8a+ cDCs (nc-cDCs), which ex- press pDC and cDC signatures (e.g., CX3CR1, CD11c, and MHCII), do not produce IFN-a,and activate T cell proliferation (47, 48). Interestingly, pDCs and nc-cDCs require E2-2/TCF4 to develop, and reduced levels ofE2-2 lead to higher ID2 and expression of cDC genes (18, 47, 48). Consistent with this finding, we observed E2-2/TCF4 ex- pression in human pDCs (Fig. 5A), with decreas- ing levels of E2-2/TCF4 and increasing levels of ID2 as AS DCs transition to CD1C+ DCs (fig. S5, C to F). These findings suggest that AS DCs are similar to human CD2hi pDCs andmurine nc-cDCs.
+
+More generally, our use of the DC atlas to understand BPDCN cells illustrates how single-cell analysis can pin- point relationships of diseased cells to healthy cells.
+
+Nonetheless, some DC/monocyte subtypes were likely missed because they do not express MHC class II at rest, can onlybe defined bynon-RNAmolecules, are distinguished by low-abundance transcripts, or are onlypresent during inflammation, disease, or within tissues. To build a comprehensive im- mune cell atlas, future studies will need to address these challenges as well as localize these cell types within lymphoid and nonlymphoid tissues.
+
+
+Healthy donors were recruited from the Boston-based PhenoGenetic project, a resource of healthysubjectsthatare recontactablebygeno- type (57), and the Newcastle community. Individ- uals were excluded if they had a history ofcancer, allergies, inflammatory disease, autoimmune dis- ease, chronic metabolic disorders, or infectious disorders. All healthy donors were nonsmokers, had a normal BMI and normal blood pressure, and were between 25 and 40 years of age.
+
+
+
+
+### Comments
+
+
+
+# Template 
+
+## Title
+[citation]
+### Highlights
 
 
 
