text: Add notes paper DC-CL

--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -336,6 +336,113 @@ main CL ontology, but a record of the Hemo_CL subset as described in this paper 
 
 A "rigorous definition" is somewhat a looser version of a "computable definition".  
 
+
+## An improved ontological representation of dendritic cells as a paradigm for all cell types
+[@doi:10.1186/1471-2105-10-70]
+
+### Highlights
+
+Currently, the CL employs multiple is_a relations, defining cell types in terms of histological, functional, and lineage properties, and the majority of definitions are written with sufficient generality to hold across multiple species. This approach limits the CL's utility for computation and for cross-species data integration.
+
+DC-CL subtypes are delineated on the basis of surface protein expression, systematically including both species-general and species-specific types and optimizing DC-CL for the analysis of flow cytometry data.
+
+To help meet the data annotation needs of model organ- ism researchers, Bard and colleagues developed an ontol- ogy of cell types [14] that has been widely used for the annotation of data in genome and other biological data- bases, including biorepository data. To enhance the CL's utility for computational analyses, we developed a sys- tematic approach for the ontological representation of cells as described below, adhering to the principles out- lined in [13]
+
+The Cell Ontology (CL) currently contains representa- tions of some 863 cell types
+
+Each cell type within the CL is related to at least one super- type via the is_a (subtype) relation, but most CL cell types have multiple supertypes, and are thus classified on mul- tiple axes, a phenonmenon referred to as 'is_a overload- ing' [15]
+
+To enhance the CL's utility for computational analyses, we developed a systematic approach for the ontological rep- resentation of cells that
+
+-  separates classification via the is_a relation from the assertion of structural, functional, and lineage properties by using formally defined, property-specific relations, such as has_function
+- systematically includes both species-neutral and spe- cies-specific representations of cell types
+- defines cell types on the basis of specific combinations of surface proteins used for identification of the cells via flow cytometry
+
+
+We have applied our method to develop an extension of the CL, DC-CL, for dendritic cells (DC), focusing on the DC types observed in mice and humans and optimizes it for the analysis of flow cytometry data. 
+
+In the immunological literature and research community, the term 'dendritic cell' does not refer to a single, clearly distinguishable cell type; rather it refers to cells from a variety of sub-populations that have different morpholo- gies, are distributed across different microenvironments within the body, express different microbial receptors and surface molecules, and different cytokines.
+
+We chose DCs as our case study in order to standardize the current terminology and definitions for DC subtypes and provide a common point of reference from which to maintain a common representation of DCs as knowledge about their subtypes evolves.
+
+To develop a general method for the ontological represen- tation of cell types, we first identified five families of cel- lular properties that can hold for a given cell type across the various microenvironments in which the cell type can be found. We identified the following five such families of properties:
+
+i) structural components, such as granules in the cytoplasm or molecules on the cell surface
+
+ii) functions cells of the given type perform
+
+iii) dispositions, such as the tendency to participate in certain types of processes
+
+iv) anatomical locations in which the cells are found and
+
+v) lineage relationships.
+
+More precisely, we classify DCs by surface protein expression
+
+In addition, in constructing DC-CL we employed accepted principles of ontology development outlined by the OBO Foundry [13], including the use of genus-differentia definitions [21].
+
+Types are general; they are the kinds of things that exist and are documented in scientific text- books (e.g. human, red blood cell); instances are particu- lar; they are the specific examples upon which experiments are performed (e.g. J. Craig Venter, the many red blood cells in my body)
+
+Cell types in DC-CL are defined in terms of the proteins and protein complexes expressed on the cell surfaces of the corresponding instances, consistent with the characterization of DC populations using surface protein expression.
+
+The definitions of such types thus involve terms representing proteins in the Protein Ontology (PRO) [24] and protein complexes in the Gene Ontology Cellular Component Ontology (GO CC) [25]. The reference to proteins and protein complexes enables us to assert the specific presence or absence of defining molecules on cells of a given type.
+
+CD11c- plasmacytoid dendritic cell is_a leukocyteCL that 
+has_plasma_membrane_part CD45RAPRO and 
+has_plasma_membrane_part CD123PRO and 
+has_plasma_membrane_part CD303PRO and 
+has_plasma_membrane_part ILT7PRO and 
+lacks_plasma_membrane_part CD11cPRO and 
+lacks_plasma_membrane_part CD3PRO and 
+lacks_plasma_membrane_part CD19PRO and
+lacks_plasma_membrane_part CD34PRO and 
+lacks_plasma_membrane_part CD56PRO
+
+For example, two defined classes of plasmacytoid DCs might be distinguished, those that do and those that do not express CCR7 on their respective membranes.
+
+For example, CD11clow plasmacytoid DCs express low levels of CD11c relative to leukocytes and are defined this way in DC-CL.
+
+Such assertions are needed for example to distinguish conventional DCs (CD11c high), CD11c low plasmacytoid DCs, and CD11c negative plasmatcytoid DCs.
+
+
+To define these relations, we first define the functional operators geometric_mean_of and number_of. The first is defined in the usual way, as a function from a set of num- bers to their geometric mean [29]. number_of(x, Y, R, t) is defined as the number of instances of type Y that are related to x, an instance of X, by the relation R at time t. Thus for example where R is the relation has_ part, this results in
+
+To best facilitate cross-species data interoperability, ontol- ogies need to provide both species-neutral and species- specific terms. Species-neutral terms allow for commonal- ities between species to be identified
+
+Cells that are CD11c+ and CD19- CD3- C34- CD56- are referred to as conventional dendritic cells in both mice and humans, and instances of such cells in mice and in humans are instances of the DC-CL type conventional dendritic cell.
+
+PRO is species-neutral in the sense that, pro- teins from different species that are the products of orthol- ogous genes are instances of the same PRO gene product level type, and proteins from different species represent- ing equivalent forms (e.g. CD45RA in human and mouse) are instances of the same sequence variant level or protein isoform level types
+
+To avoid the unnecessary creation of overly specific sub- types, we define cell types in terms of PRO gene product level types, and recommend that PRO types at this level be used wherever possible.
+
+Terms for 29 DC types are defined in DC-CL, along with 12 precursor cell types, which are defined in order to assert lineage relationships. All DC types are subtypes of conventional dendritic cell, CD11clow plasmacytoid dendritic cell, or CD11c- plasmacytoid dendritic cell (Table 1).
+
+Table 1: The genus-differentia form of the definitions for the three most general types in DC-CL
+
+
+In addition to defining the DC types by the presence or absence of specific surface proteins, we include assertions about which of the Toll-like receptors (TLR) are expressed on each DC type. Future work on DC-CL will include incorporation of assertions about other molecules impor- tant to immune function, such as additional pattern rec- ognition receptors and cytokine receptors.
+
+DCs have a particularly complicated biology [16-18]; thus not only are efforts to develop standardized, comprehensive information resources needed, but DCs are a good model for testing a method for representing cells in an ontology.
+
+The inclusion of species-specific cell types allows for the more specific annotation of data and for the incorpora- tion within DC-CL of species-specific properties, many of which have important functional consequences
+
+To define cell types on the basis of species of origin, or to include assertions that hold for the type in one species but not another, we recommend the creation of species-spe- cific extensions rather than the inclusion of such types in CL or DC-CL. This approach allows for the representation of detailed, species-specific information without using multiple modes of classification (structure and species of origin) or including conflicting assertions in the core ontology. 
+
+Such statistical methods can be applied to the analysis of individual flow data sets, while ontology defi- nitions need to hold universally, across different experi-
+mental designs, protocols, and equipment and across differences in the resulting distributions of fluorescence intensities for reference cells. Indeed, the ontology defini- tions should hold across different assays for surface pro- tein expression, and should not be tied directly to flow cytometry. We have therefore taken a relatively simple approach to the formulation of cell definitions that hold universally and that are supported by our current under- standing of DC biology. It is our hope, however, that our work, taken together with [40], will encourage the use of more objective criteria in the analysis of flow cytometry data and in the description and analysis of cell types in general.
+
+Their development within the framework of a common top- level ontology (Basic Formal Ontology, BFO, [42]) and consistent employment of a common set of relations allows Foundry ontologies to be used together as modules of a larger system.
+
+DC-CL provides a prospectively highly valuable resource for the study of DCs. It further offers a generalizable method for the ontological representation of cells that offers significant benefits in the form of increasing the amount and accuracy of information contained in the ontology, enhancing support of the ontology for compu- tation, and providing a much needed resource to support analysis of high-throughput, multidimensional flow data. Thus, we propose the method used to create DC-CL as a strategy for the representation of all cells of hematopoietic lineage
+
+### Comments
+
+Utility maximized for computational analysis --> There might be atrade off with real research setttings.
+
+species neutral representation!! this is very imaginative. 
+
+The definitions they raise are artificial: in practice, the concepts used are different. 
+
 # Template 
 
 ## Title
