--- a/content/04.concepts.md
+++ b/content/04.concepts.md
@@ -67,3 +67,8 @@ Given the neuron identity-defining properties, I proposed to call these transcri
     \cite{citation
 
 In such cases it is possible to compare if the predicted cell type matches the ‘biological’ cell type. We identified 17 independent datasets with homogeneous cell-type populations, where the biological cell type has been reported (this
+
+## species-neutral cell types
+
+## An improved ontological representation of dendritic cells as a paradigm for all cell types
+[@doi:10.1186/1471-2105-10-70]
