text: Add notes

--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -5,12 +5,16 @@ This is a collection of resources to be read and parsed.
 
 https://janzz.technology/ontology-and-taxonomy-stop-comparing-things-that-are-incomparable/
 
-Diehl AD, Augustine AD, Blake JA, Cowell LG, Gold ES, Gondré-Lewis TA, Masci AM, Meehan TF, Morel PA, Nijnik A, Peters B, Pulendran B, Scheuermann RH, Yao QA, Zand MS, Mungall CJ: Hematopoietic cell types: Prototype for a revised cell ontology. J Biomed Inform 2010, http://www. ncbi.nlm.nih.gov/pubmed/20123131
-
 https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-20-supplement-5
 
 
 https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-18-supplement-17
+
+
+flowCL: ontology-based cell population labelling in flow cytometry
+
+CLO: The cell line ontology
+
 
 Mapping the transcriptional diversity of genetically and anatomically defined cell populations in the mouse brain
 
