--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -5,8 +5,9 @@ This is a collection of resources to be read and parsed.
 
 https://janzz.technology/ontology-and-taxonomy-stop-comparing-things-that-are-incomparable/
 
-https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-20-supplement-5
+https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-017-1980-6
 
+Neves M, Damaschun A, Mah N, Lekschas F, Seltmann S, Stachelscheid H, Fontaine JF, Kurtz A, Leser U. Preliminary evaluation of the CellFinder literature curation pipeline for gene expression in kidney cells and anatomical parts. Database 2013, 2013:bat020. doi:10.1093/database/bat020
 
 https://bmcbioinformatics.biomedcentral.com/articles/supplements/volume-18-supplement-17
 
