--- a/content/08.ontology.md
+++ b/content/08.ontology.md
@@ -443,7 +443,7 @@ species neutral representation!! this is very imaginative.
 
 The definitions they raise are artificial: in practice, the concepts used are different. 
 
-# Template 
+
 
 ## Hematopoietic Cell Types: Prototype for a Revised Cell Ontology
 [@doi:10.1016/j.jbi.2010.01.006]
@@ -474,6 +474,39 @@ The work described herein represents a significant advance in the representation
 
 
 ### Comments
+
+
+
+
+## Usage of cell nomenclature in biomedical literature
+[@doi:10.1186/s12859-017-1978-0]
+
+### Highlights
+Cell lines and cell types are extensively studied in biomedical research yielding to a significant amount of publications each year. Identifying cell lines and cell types precisely in publications is crucial for science reproducibility and knowledge integration.
+
+In this study, we analyse the usage of cell nomenclature, both in Vivo, and in Vitro in biomedical literature by using text mining methods and present our results.
+
+Our aims are to understand how the nomenclature related to cell types and cell lines is used in literature, how both evolved over time, and how this information may allow us to provide better tools and resources for biomedical researchers. To the best of our knowledge, this is the first study with this focus, while several previous studies focused on identify- ing the cell type and cell line names in text [5, 6].
+
+
+The cell type dictionary is generated from the labels and syno- nyms used in the CL, obtained from the CL’sOWL ver- sion available at http://purl.obofoundry.org/obo/cl.owl.
+
+The final cell type dictionary consists of 3838 term referring to 2180 distinct cell types.
+
+We used the Whatizit [9] entity recognition pipeline to annotate cell type and cell line names. The taggers of Whatizit anno- tate documents in a dictionary-based approach.
+
+False nega- tives are mainly due to the cell types which are not yet covered by CL such as cells tagged with cell surface markers, e.g., ‘CD58-positive natural killer cell’, and absent synonyms (e.g. ‘neuronal cell’ is not a synonym for ‘neuron’ in CL, although it is listed as synonym by alternative resources such as CellFinder [12].
+
+Using our text mining approach, we were able to identify 1277 of 2180 (59%) cell types and 4907 of 38,605 (13%) cell lines in the open access full text articles.
+
+Both cell line as well as cell type nomenclature suffers from a lack of authority in naming convention unlike other biological entities that have well-established con- sortium such as HUGO Gene Nomenclature Committee (HGNC) for gene names [13].
+
+Our results will be of most interest to researchers in biomedical text mining. We generated a novel corpus annotated with mentions of cell types and cell lines, which can be used for developing and evaluating text mining methods.
+
+
+### Comments
+
+
 
 
 # Template 
