text: Add notes on Osumi-Sutherland paper

--- a/content/03.claims.md
+++ b/content/03.claims.md
@@ -32,6 +32,7 @@
     \cite{hobert2016terminal
     
 # The retina is a good case study for cell-type definitions
+
 ## The evolution of cell types in animals: emerging principles from molecular studies
     \cite{arendt2008evolution
 ## Function first: classifying cell types and circuits of the retina
@@ -40,6 +41,7 @@
     \cite{plachetzki2007key
 ## Neuronal cell types
     \cite{masland2004neuronal
+[@doi:10.1186/s12859-017-1980-6]
     
 # Cell-type markers might not be valid across all taxons of interest
 ## How Single-Cell Genomics Is Changing Evolutionary and Developmental Biology
