--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,11 +1,14 @@
 
 # Articles to read 
 
+
+Gruber TR. Toward principles for the design of ontologies used for knowledge sharing? Int J Hum Comput Stud. 1995;43:907–28
+
 This is a collection of resources to be read and parsed.
 
 https://janzz.technology/ontology-and-taxonomy-stop-comparing-things-that-are-incomparable/
 
-https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-017-1980-6
+
 
 Neves M, Damaschun A, Mah N, Lekschas F, Seltmann S, Stachelscheid H, Fontaine JF, Kurtz A, Leser U. Preliminary evaluation of the CellFinder literature curation pipeline for gene expression in kidney cells and anatomical parts. Database 2013, 2013:bat020. doi:10.1093/database/bat020
 
