--- a/content/02.toread.md
+++ b/content/02.toread.md
@@ -1,6 +1,7 @@
 
 # Articles to read 
-
+## Describing Species - Judith Winston
+[@doi:10.1017/CBO9781107415324.004]
 
 
 This is a collection of resources to be read and parsed.
