text: Add notes on species definition

--- a/content/15.species.md
+++ b/content/15.species.md
@@ -64,6 +64,43 @@ two codes are independent; the same genus name may be used for an animal and for
 Some systematists find the idea of any further compromise offensive and would like to see a completely phylogenetic (cladistic) classification system replace it (Hennig 1981; deQueiroz and Gauthier 1990).
 
 
+
+#### Chapter 3. Species and Their Discovery Chapter
+
+There is already too much literature on the “species problem.”
+
+A species can mean a number ofthings biologically, depending on the characteristics of the organisms involved.
+
+It is a different phenomenon in solitary sexually reproducing animals (those most like ourselves, and perhaps for that reason, the most closely studied), than it is in sexually reproducing plants, clonal plants, and clonal or colonial invertebrates, let alone bacteria and viruses.
+
+Numerous models have been proposed. They can be grouped under five main headings (Table 3.1): phenetic, biological, phylogenetic, ecological, and cohesive.
+
+The phenetic species concept is a strictly operational and nonexplanatory concept based only on the observable facts of similarity and dis- continuity
+
+The evolutionary or phylogenetic species concept is favored by many biologists, but has the disadvantage that lineage affiliation cannot be unequivocally proven (without time travel). Another drawback is that this model deals well with speciation by branching (cladogenesis), but not as well with reticulate processes. 
+
+## Phenetic Species Concept
+
+Species are the smallest groups that are consistently and persistently distinct and distinguishable by ordinary means (Cronquist 1978; DuRietz 1930; Sokal 1973; Doyen and Slobodchikoff 1974)
+
+No one of these approaches is completely right or wrong. Instead, the different concepts provide models appropriate for different purposes.
+
+In particular, what is important is whether speciation occurs strictly by branching or cladogenesis (figure 3.1) or whether reticulation is possible.
+
+The biological species concept is defined by reproductive isolation. Species by this definition are groups of “actually or potentially interbreeding natural populations which are reproductively isolated from other groups” (Mayr 1963:19).
+
+about cladogenesis: life is not always neat and logical. For the majority of animals and at least a substantial minority of plants, this assumption mostly seems to be met, and phylogenetic analysis works well. But you must be aware ofits limitations and the potential impact ofthese other phenomena on your study organism
+
+organisms with closed genomes, germ cells become distinct from somatic cells early in development.
+
+in organisms with open genomes, such as plants and certain groups of invertebrates, almost any dividing cell can give rise to reproductive cells, meaning that any external genetic material that survives introduction into their cells has a chance of being passed on.
+
+All organisms contain an array of biological information, some of which is useful in a comparative or taxonomic sense, some of which is useless, and some ofwhich may even be misleading. Quicke (1993:263) defines a taxonomic character as “any physical structure (macroscopic, microscopic or molecular) or behavioral system that can have more than one form (character state), the variation in which potentially provides phylogenetic information.”
+Mayr (1969:121) defines a taxonomic character as “any attribute of a member of a taxon by which it differs or may differ from a member of a different taxon.”
+
+Newspecies are often collected in communitystudies, area surveys, and oceanographic sampling in which the primary intent of the project is to describe community diversity or the distribution and abundance ofmajor organisms. In such cases the specimens that cannot be identified to species level are often given numbers or letters to distinguish them as separate taxa when the project results are initially written up for publication. Later they may be described formally as new species, often by collaboration with a taxonomist, and attention called to their status in previous publications.
+
+It would be impossible to list here all the books and articles that deal with populations and species–major topics of evolutionary biology. Those listed here were selected to give different perspectives and opinions.
 ### Comments
 Figure 1.1 New equipment and new habitats yield new species.
 --> Same is true for cell types!
