--- a/content/15.species.md
+++ b/content/15.species.md
@@ -79,7 +79,7 @@ The phenetic species concept is a strictly operational and nonexplanatory concep
 
 The evolutionary or phylogenetic species concept is favored by many biologists, but has the disadvantage that lineage affiliation cannot be unequivocally proven (without time travel). Another drawback is that this model deals well with speciation by branching (cladogenesis), but not as well with reticulate processes. 
 
-## Phenetic Species Concept
+ Phenetic Species Concept
 
 Species are the smallest groups that are consistently and persistently distinct and distinguishable by ordinary means (Cronquist 1978; DuRietz 1930; Sokal 1973; Doyen and Slobodchikoff 1974)
 
@@ -101,9 +101,62 @@ Mayr (1969:121) defines a taxonomic character as “any attribute of a member of
 Newspecies are often collected in communitystudies, area surveys, and oceanographic sampling in which the primary intent of the project is to describe community diversity or the distribution and abundance ofmajor organisms. In such cases the specimens that cannot be identified to species level are often given numbers or letters to distinguish them as separate taxa when the project results are initially written up for publication. Later they may be described formally as new species, often by collaboration with a taxonomist, and attention called to their status in previous publications.
 
 It would be impossible to list here all the books and articles that deal with populations and species–major topics of evolutionary biology. Those listed here were selected to give different perspectives and opinions.
+
+#### Chapter 4. Establishing Identity: The Literature Search
+
+One reason some taxonomists strongly discourage species description by nonspecialists is that they are aware of the awful mistakes that have been made (by both amateurs and professionals) who rushed into print without stopping to make sure that what they were describing was both new and real.
+
+It may be an individual genetic variant or mutant. It may be a variant produced by growth under unfavorable conditions (e.g., a plant subjected to heavy grazing, an animal stunted by an inadequate food supply).
+
+Especially with plants, it may be a hybrid between two known species. It may have been described so recently that it is not in the book or article you used for identification.
+
+It maybe a known species, but one that has never been described before from the region where you found it. Maybe it is an introduced species, or maybe it is just rare or inconspicuous and was overlooked by earlier workers.
+
+It may indeed represent a completely new species, which must be named and described.
+
+- Where to Find the Taxonomic Literature
+
+- Be sure to allow enough time
+- Verify your references.
+
+To finish your literature search, you must learn to read taxonomic de- scriptions, understand the parts of a description, and know why they are included. This topic is covered in depth in chapters 7–15, but is summarized here.
+
+However, there is a common basic structure: a heading that consists of scientific name, name, author, and date, followed by a synonymy (a list of previous references to that species), and then the main body of the description, which may include etymology, diagnosis, taxonomic discussion, ecology, and distribution sections.
+
+Diagnosis. This section gives a brief comparative description of the organism, pointing out how it differs from close relatives (why it is a horse of a different color).
+
+Description. This portion contains the straightforward description of the species (2-year-old, chestnut, 14 hands, etc.). Again, style varies from group to group and publication to publication.
+
+Distribution. In a description of a new species this may just be one locality. For a common or wide-ranging species it may be a long list of localities. If the work is regional in scope (e.g., a flora or a faunal survey) the author may list only its occurrences in the part of the world being studied.
+
+#### Chapter 5. Establishing Identity: Using Museum Collections
+
+Natural history collections are undoubtedly partofmodern biology, andare arguably one ofthe most cost-effective research tools
+
+
+Biologists are often confused about what taxonomists mean by the word type. Ifyour background is in biology, ecology, or paleontology, you were probably taught a species concept that was biological, in which species were recognized to be (or to have been) a population of reproducing individuals.
+
+Ancient Greek systems of categorization, in which terms were defined on the basis of their similarity to some ideal or _type_.
+
+Without knowledge of the workings of genetics or selection, species were perceived as immutable entities that could be defined by some perfect _type_ and all the specimens that were _typical_ belonged to that species or other category
+
+Types in taxonomy have a very different meaning. They make the system we use for naming organisms stable and objective by tying the published name to an actual specimen or suite of specimens, serving as a reference standard for a taxon
+
+
+Holotype. The holotype is a single specimen used by an author, either the only specimen he found or one of several found, but the only one designated as a type. When people talk about the type, they are referring to this single specimen.
+
+Paratypes. Paratypes are specimens that the person making the original description examined while carrying out the work.
+
+Topotype. These are specimens collected from the same locality as the type material (although not necessarily at the same time). Again, they have no official standing, but if a museum has such material it is usually well worth seeing. I can vouch for the fact that with marine invertebrates, topotypical material of the species you are seeking is much more likely to belong to that species than material labeled with the same name but from thousands of miles away.
+
+
+
 ### Comments
 Figure 1.1 New equipment and new habitats yield new species.
+
+We do not have anything like a "species type" for cell types. 
 --> Same is true for cell types!
+
 
 # Template 
 
